We have a title!

--- a/index.tex
+++ b/index.tex
@@ -10,7 +10,9 @@
 
 \begin{document}
 \begin{centering}
-	\Huge{tbd. Design Sciences and Empirical Software Engineering / Reactive Programming}
+	\Large{Master Seminar}
+	\par
+	\Huge{Design Sciences and\\Empirical Software Engineering}
 	\par
 	\vspace{2ex}
 
