--- a/index.tex
+++ b/index.tex
@@ -37,7 +37,7 @@
 		\vspace{2ex}
 
 		\small{
-			\textbf{Keywords}: tbd.
+			\textbf{Keywords}: Design Science, Empirical Software Engineering, FAIR Research Principles, Reactive Programming, Object Oriented Programming
 		}
 		\par
 		\vspace{4ex}
