--- a/index.tex
+++ b/index.tex
@@ -64,6 +64,8 @@ As the paper further compares RP with the observer pattern \cite{gamma1995design
 	\item \textbf{Q2.4}: Which design alternatives exist (in a particular application context)?
 \end{itemize}
 
+However, we will not review the papers application of statistical methods since this is out of scope.
+
 In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \textbf{Q1} and \textbf{Q2.1}. The questions \textbf{Q2.2} through \textbf{Q2.4} will be tackled in section 4 where we discuss earlier findings.
 
 \subsection{Empirical Software Engineering}
