--- a/index.bib
+++ b/index.bib
@@ -117,3 +117,21 @@
 	doi={10.1109/TSE.2018.2833109},
 	ISSN={},
 	month={July},}
+
+@inproceedings{Salvaneschi:2014:ESP:2635868.2635895,
+	author = {Salvaneschi, Guido and Amann, Sven and Proksch, Sebastian and Mezini, Mira},
+	title = {An Empirical Study on Program Comprehension with Reactive Programming},
+	booktitle = {Proceedings of the 22Nd ACM SIGSOFT International Symposium on Foundations of Software Engineering},
+	series = {FSE 2014},
+	year = {2014},
+	isbn = {978-1-4503-3056-5},
+	location = {Hong Kong, China},
+	pages = {564--575},
+	numpages = {12},
+	url = {http://doi.acm.org/10.1145/2635868.2635895},
+	doi = {10.1145/2635868.2635895},
+	acmid = {2635895},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+	keywords = {Controlled Experiment, Empirical Study, Reactive Programming},
+}
