--- a/index.tex
+++ b/index.tex
@@ -47,26 +47,26 @@
 \section{Introduction}
 Solving unique problems through the application of software engineering principles does not automatically lead to unique solutions in general. In fact, the emergence of recurring design patterns can be observed. Salvaneschi et al. \cite{7827078} challenge the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility in comparison to the usage of reactive programming \emph{(RP)}.
 
-We will examine the paper \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of questions within this paper. With the focus on  design sciences and empirical software engineering methods, set \textbf{Q1} considers the following three questions:
+We will examine the paper \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of research questions within this paper. With the focus on design sciences and empirical software engineering methods, set \textbf{RQ1} considers the following three questions:
 
 \begin{itemize}
-	\item \textbf{Q1.1}: Which empirical research methods, approaches and concepts were applied?
-	\item \textbf{Q1.2}: Are these research methods, approaches and concepts applied well, what could have been done better?
-	\item \textbf{Q1.3}: Does the paper meet FAIR principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}?
+	\item \emph{RQ1.1: Which empirical research methods, approaches and concepts were applied?}
+	\item \emph{RQ1.2: Are these research methods, approaches and concepts applied well, what could have been done better?}
+	\item \emph{RQ1.3: Does the paper meet FAIR principles \cite{2019arXiv190805986H} \cite{wilkinson:2016}?}
 \end{itemize}
 
-As the paper further compares RP with the observer design pattern \cite{gamma1995design}, an equivalent based on object oriented programming \emph{(OOP)} paradigms, question set \textbf{Q2} reviews software engineering specific aspects of that comparison:
+As the paper further compares RP with the observer design pattern \cite{gamma1995design}, an equivalent based on object oriented programming \emph{(OOP)} paradigms, question set \emph{RQ2} reviews software engineering specific aspects of that comparison:
 
 \begin{itemize}
-	\item \textbf{Q2.1}: How does the paper define RP and OOP?
-	\item \textbf{Q2.2}: When should RP be considered, and when not?
-	\item \textbf{Q2.3}: Which experiments should be conducted in future work?
-	\item \textbf{Q2.4}: Which design alternatives exist (in a particular application context)?
+	\item \emph{RQ2.1: How does the paper define RP and OOP?}
+	\item \emph{RQ2.2: When should RP be considered, and when not?}
+	\item \emph{RQ2.3: Which experiments should be conducted in future work?}
+	\item \emph{RQ2.4: Which design alternatives exist (in a particular application context)?}
 \end{itemize}
 
 However, we will not review the papers application of statistical methods since this is out of scope.
 
-In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \textbf{Q1} and \textbf{Q2.1}. The questions \textbf{Q2.2} through \textbf{Q2.4} will be tackled in section 4 where we discuss earlier findings.
+In the following we will introduce and clarify important terms. Section 2 and 3 will examine the mentioned paper more closely and answer \emph{RQ1} and \emph{RQ2.1}. The questions \emph{RQ2.2} through \emph{RQ2.4} will be tackled in section 4 where we discuss earlier findings.
 
 \subsection{Empirical Software Engineering}
 Software engineering applies engineering principles when working with software artifacts \cite{159342} throughout their life cycle. Although ``\emph{the application of a systematic, disciplined, quantifiable approach to the development (\dots) of software (\dots)}'' \cite{159342} may rightful restrain us methodically, it is agreed upon that the process leading to a software product is of creative nature \cite{8051350}. It is this creative environment that keep the fundamental building blocks of software development, maintenance and operation in a constant flux of change. As tools and methods keep changing \cite{kapferer:2019:empirical}, software engineering organizations need to adapt to new circumstances often. Kapferer \cite{kapferer:2019:empirical} highlights in his introduction to empirical software engineering how the exertion of continuous quality improvement procedures like \emph{Plan/Do/Study/Act} \cite{deming} or an agile project setup like \emph{Scrum} leads to the controlled adoption of such. A reliable benchmark allows an organization to estimate feasibility of a new method or tool in advance as well as measure impact after its implementation.
@@ -81,10 +81,10 @@ Roel J. Wieranga derives guidelines specifically for software engineering resear
 \emph{FAIR} is an abbreviation for Findability, Accessibility, Interoperability and Reusability. It was first introduced by Mark. D. Wilkinson et al. in March 2016 \cite{wilkinson:2016} and describes guidelines to foster digital research objects over the long-term. The guidelines want to maximization the value of research results for the science community as a whole. Following a summary of the four cornerstones:
 
 \begin{itemize}
-	\item \textbf{Findability}: Objects are annotated with well-defined meta information. This information is usable for both humans and machines. An example is a globally unique, persistent identifier for a publicized paper or keywords highlighting the problem domains of a research result. There is a catalogue which provides searchable access to this meta information.
-	\item \textbf{Accessibility}: Digital objects can be retrieved using an open, standardized communication protocol. It provides ways to authenticate and/or authorize users (again both humans and machines) if necessary. Meta information is always available, even if the actual object is not anymore.
-	\item \textbf{Interoperability}: Meta information and the object it describes use formats and vocabularies following FAIR principles. For example an accepted, domain specific terminology is used or a data set collected during an experiment is available in XML format, alongside with a schema \footnote{\url{https://www.w3.org/TR/xmlschema-1/}} describing its structure. Referenced research results are part of the meta information.
-	\item \textbf{Reusability}: Research results meet the respective science communities standards. Further results are released under a concise and accessible data usage license to simplify their reuse in follow-up research projects.
+	\item \emph{Findability}: Objects are annotated with well-defined meta information. This information is usable for both humans and machines. An example is a globally unique, persistent identifier for a publicized paper or keywords highlighting the problem domains of a research result. There is a catalogue which provides searchable access to this meta information.
+	\item \emph{Accessibility}: Digital objects can be retrieved using an open, standardized communication protocol. It provides ways to authenticate and/or authorize users (again both humans and machines) if necessary. Meta information is always available, even if the actual object is not anymore.
+	\item \emph{Interoperability}: Meta information and the object it describes use formats and vocabularies following FAIR principles. For example an accepted, domain specific terminology is used or a data set collected during an experiment is available in XML format, alongside with a schema \footnote{\url{https://www.w3.org/TR/xmlschema-1/}} describing its structure. Referenced research results are part of the meta information.
+	\item \emph{Reusability}: Research results meet the respective science communities standards. Further results are released under a concise and accessible data usage license to simplify their reuse in follow-up research projects.
 \end{itemize}
 
 Hasselbring et al. \cite{2019arXiv190805986H} transfer the general applicable guidelines to the field of computer science research and formulate domain specific recommendations. Their key point is the request for treating software artifacts produced during a research project with the same level of care as the project report itself. Platforms like Zenodo\footnote{\url{https://zenodo.org}} in conjunction with GitHub\footnote{\url{https://github.com}} allow to reference, archive and later retrieve associated software artifacts for example.
@@ -116,13 +116,22 @@ The \emph{EventTarget interface}\footnote{\url{https://dom.spec.whatwg.org/\#int
 The code in listing \ref{lst:eventtarget} shows how an event handler (the \emph{observer}) can register for events emitted by an event target (the \emph{subject}). Registered event handlers will be called one after another once the event target dispatches (\emph{notifies}) an event. The handler shown gains access to the \emph{subjects} state through the \mintinline{JavaScript}{target} property of the function parameter \mintinline{JavaScript}{e}.
 
 
-\section{Paper Revisit (Q1 and R2.1)}
+\section{Revisit the Paper (Q1 and R2.1)}
 
 Salvaneschi et al. start with a broad overview on RP, its history, how it came to be and why it is determined as a trend in computer science for some time. Right from the start the term reactive application is defined as a piece of software which reacts continuously on stimuli of different origins. These events are either rooted in a technical system component or triggered by a human user, for example when interacting with a GUI.
 
 We get a summary of the similarities and differences of RP and the observer design pattern, chosen as representative for the OOP paradigm, within the first page. Salvaneschi et al. show benefits and potential problems of both. More concrete examples of RP and the observer pattern are given later in section 2. The papers main hypothesis is derived from the RP/OOP comparison, underpinned with external references: ``\emph{(...) it has been repeatedly argued that RP greatly improves over the traditional Observer pattern used in Object-oriented (OO) programming both (i) from the software design perspective as well as (ii) from the respective of facilitating comprehension of software.}'' Hence the lack of sufficient empirical evidence is then stated as motivation for the study at hand.
 
-The group used the study to confirm results presented earlier in 2014. With an additional 89 subjects, the new experiment was conducted with a total of 127 subjects.
+They formulate the following four research questions which they then use to build their study setup upon:
+
+\begin{itemize}
+	\item \emph{RQ1: Does reactive programming impact the correctness of program comprehension?}
+	\item \emph{RQ2: Does reactive programming impact time for program comprehension?}
+	\item \emph{RQ3: Does comprehending RP programs require a different programming skills level than the OO style?}
+	\item \emph{RQ4: What are the reasons for a difference - if a any - in comprehending RP programs and OO programs?}
+\end{itemize}
+
+The first three research questions were evaluated in an experiment with a small group of 38 subjects in an earlier study \cite{Salvaneschi:2014:ESP:2635868.2635895} already. Adding 89 new subjects brings more statistical significance to this new study. Hence research question 4 targets to interpret insights gained from the preceding questions further.
 
 
 
