--- a/index.tex
+++ b/index.tex
@@ -47,7 +47,7 @@
 \section{Introduction}
 Solving unique problems through the application of software engineering principles does not automatically lead to unique solutions in general. In fact, the emergence of recurring design patterns can be observed. Salvaneschi et al. \cite{7827078} challenge the observer pattern \cite{gamma1995design} and its impact on source code comprehensibility in comparison to the usage of reactive programming \emph{(RP)}.
 
-We will examine the paper \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of research questions within this paper. With the focus on design sciences and empirical software engineering methods, set \textbf{RQ1} considers the following three questions:
+We will examine the paper \emph{On the Positive Effect of Reactive Programming on Software Comprehension: An Empirical Study} by Salvaneschi et al. \cite{7827078} and answer two sets of research questions within this paper. With the focus on design sciences and empirical software engineering methods, set \emph{RQ1} considers the following three questions:
 
 \begin{itemize}
 	\item \emph{RQ1.1: Which empirical research methods, approaches and concepts were applied?}
@@ -137,18 +137,22 @@ The first three research questions were evaluated in an experiment with a small 
 
 The research group structured its study in two parts: Within limited time, (i) part one asks two groups of subjects in an experiment to interpret either ten RP or ten OOP code samples and answer questions regarding the expected behavior. This is followed by (ii) a survey of four quantitative and one qualitative question where subjects can give their opinion on comprehensibility of RP and OOP source code.
 
-The comprehensibility part uses code examples from three different areas as defined by Salvaneschi et al.: Four questions are \emph{synthetic applications}, code describing pure data flow and the transformation of values. The six other questions are cases for \emph{graphical animations} and \emph{interactive applications}, hence all related to GUI engineering/development. Combined with a time limit, part one contributes to answer the research questions \emph{RQ1} through \emph{3}.
+The comprehensibility part uses code examples from three different areas as defined by Salvaneschi et al.: Four questions are \emph{synthetic applications}, code describing pure data flow and the transformation of values. The six other questions are cases for \emph{graphical animations} and \emph{interactive applications}, hence all related to GUI engineering/development. Combined with a time limit, part one contributed to answer the research questions \emph{RQ1} through \emph{3}.
 
-Study subjects
+The subject population consisted exclusively of students from a software engineering course, both taught in OOP and the observer pattern as well as RP. Before going into the actual study, the total of 127 subjects were put through a quantitative self-assessment to measure the overall programming skill level of the populace. This was necessary to get the subjects acquainted with the survey tool used on one hand, on the other to collect data to answer \emph{RQ3}.
+
+\subsection{Results}
 
 
 \section{Paper Review (Q1 and R2.1)}
 Is the conclusion of Salvaneschi et al. \cite{7827078} reasonable and well argued?
 
-\textbf{Critique 1: The paper title might hope for RP topic in general, but it is soon clear that we mostly compare with UI releated stuff}
-\textbf{Critique 2: OOP solutions for reactivity are reduces to the observer pattern. The paper misses the opportunity ti mention other approaches}
-\textbf{Critique 3: FAIR: Neither the questionnaries, code samples or any additional artifacts are available. Reproducibility?}
-\textbf{Critique 4: Page 4 defines grapics and UI as traditional domains for RP; is it representative to use mainly traditional domains to challenge RP with observer? ... like: what about "using the right tool for the right thing"?}
+\begin{itemize}
+	\item \textbf{Critique 1: The paper title might hope for RP topic in general, but it is soon clear that we mostly compare with UI releated stuff}
+	\item \textbf{Critique 2: OOP solutions for reactivity are reduces to the observer pattern. The paper misses the opportunity ti mention other approaches}
+	\item \textbf{Critique 3: FAIR: Neither the questionnaries, code samples or any additional artifacts are available. Reproducibility?}
+	\item \textbf{Critique 4: Page 4 defines grapics and UI as traditional domains for RP; is it representative to use mainly traditional domains to challenge RP with observer? ... like: what about "using the right tool for the right thing"?}
+\end{itemize}
 
 \section{Discussion}
 Given the results, I will put RP in context with current trends in software engineering, in particular in its subdiscipline frontend engineering.
