--- a/index.tex
+++ b/index.tex
@@ -139,9 +139,13 @@ The research group structured its study in two parts: Within limited time, (i) p
 
 The comprehensibility part uses code examples from three different areas as defined by Salvaneschi et al.: Four questions are \emph{synthetic applications}, code describing pure data flow and the transformation of values. The six other questions are cases for \emph{graphical animations} and \emph{interactive applications}, hence all related to GUI engineering/development. Combined with a time limit, part one contributed to answer the research questions \emph{RQ1} through \emph{3}.
 
-The subject population consisted exclusively of students from a software engineering course, both taught in OOP and the observer pattern as well as RP. Before going into the actual study, the total of 127 subjects were put through a quantitative self-assessment to measure the overall programming skill level of the populace. This was necessary to get the subjects acquainted with the survey tool used on one hand, on the other to collect data to answer \emph{RQ3}.
+The subject population consisted exclusively of students from a software engineering course, both taught in OOP and the observer pattern as well as RP. Before going into the actual study, the total of 127 subjects were put through a quantitative self-assessment to measure the overall programming skill level of the population. This was necessary to get the subjects acquainted with the survey tool used on one hand, on the other to collect data to answer \emph{RQ3}.
 
-\subsection{Results}
+\subsection{Statistical Results and Findings}
+
+Salvaneschi et al. processed the gathered data from their experiment using a variety of statistical tests and derive three main findings: (i) RP increases the correctness of program comprehension; with the exception of two tasks, the RP group outperformed the OO group. Finding (ii) determines that RP style code does not require more time than comprehending their OO equivalent. With finding (iii) the group finally claims that understanding reactive applications written with RP are overall easier to understand, regardless of the individual programming skill level of the subject.
+
+\subsection{Interpretation}
 
 
 \section{Paper Review (Q1 and R2.1)}
@@ -152,6 +156,7 @@ Is the conclusion of Salvaneschi et al. \cite{7827078} reasonable and well argue
 	\item \textbf{Critique 2: OOP solutions for reactivity are reduces to the observer pattern. The paper misses the opportunity ti mention other approaches}
 	\item \textbf{Critique 3: FAIR: Neither the questionnaries, code samples or any additional artifacts are available. Reproducibility?}
 	\item \textbf{Critique 4: Page 4 defines grapics and UI as traditional domains for RP; is it representative to use mainly traditional domains to challenge RP with observer? ... like: what about "using the right tool for the right thing"?}
+	\item \textbf{Critique 5: Page 8 switchOnce was not understandable for all subjects; Observable code might have been better comprehensible. This contradicts Finding 3, where they say RP code needs a potential lower programming skill level}
 \end{itemize}
 
 \section{Discussion}
