--- a/index.tex
+++ b/index.tex
@@ -149,9 +149,13 @@ The further evaluation of the survey provides then a mainly positive result in f
 
 Indeed the research team agrees later that the hidden complexity of the RP runtime and a large API surface area, i.e. with many specialized conversion functions, might not make it easy to onboard a developer with minimal or no RP experience.
 
-With the outlook Salvaneschi et al. conclude the result evaluation with multiple suggestions for follow-up research.
+With the outlook Salvaneschi et al. conclude the result evaluation with three suggestions for potential follow-up research:
 
-TODO
+\begin{itemize}
+	\item \textbf{Interpretation of the results} connects the comprehension results with related research from psychology. They reference two respective three different cognitive models: \emph{top-down}, \emph{bottom-up} and the \emph{program model}. In context, each describes how a subject might perceive either RP or OOP source code. Designing a study focusing on this area would give deeper insight in how different programming concepts are understood from a psychological point of view. \textbf{REPHRASE}
+	\item The \textbf{language design} (API surface area, number of combinators) plays an important role in order to make resulting code more comprehensible. The research group sees potential for further studies which investigate and compare how different languages and frameworks support or lessen the comprehensibility of RP code.
+	\item To understand how programmers work will eventually lead to improved \textbf{tool support} i.e. in IDEs. Reactive applications using RP or OOP can be visualized using a graph showing dependencies of values to each other. Hence the potential of a uniform way to interpret reactive code, no matter what paradigm it uses, might be worth of further research.
+\end{itemize}
 
 
 
@@ -164,7 +168,10 @@ Is the conclusion of Salvaneschi et al. \cite{7827078} reasonable and well argue
 	\item \textbf{Critique 3: FAIR:Code samples or any additional artifacts are available. Reproducibility?}
 	\item \textbf{Critique 4: Page 4 defines grapics and UI as traditional domains for RP; is it representative to use mainly traditional domains to challenge RP with observer? ... like: what about "using the right tool for the right thing"?}
 	\item \textbf{Critique 5: Page 8 switchOnce was not understandable for all subjects; Observable code might have been better comprehensible. This contradicts Finding 3, where they say RP code needs a potential lower programming skill level}
-	\item \item \textbf{Check: Claim Page 12 Observer Pattern does not provide separation of concerns}
+	\item \textbf{Check: Claim Page 12 Observer Pattern does not provide separation of concerns}
+	\item \textbf{Critique: Page 13 and 14: Why suddently an analogy to operating system architecture?}
+	\item \textbf{Pick Up: Toolsupport Rxjs}
+	\item \item \textbf{Pick Up: ECMAScript Streams}
 \end{itemize}
 
 \section{Discussion}
