Threats to Validity

--- a/index.bib
+++ b/index.bib
@@ -135,3 +135,14 @@
 	address = {New York, NY, USA},
 	keywords = {Controlled Experiment, Empirical Study, Reactive Programming},
 }
+
+@inproceedings{DiPenta,
+	author = {Di Penta, Massimiliano and Stirewalt, R.E.K. and Kraemer, Eileen},
+	year = {2007},
+	month = {07},
+	pages = {281 - 285},
+	title = {Designing your Next Empirical Study on Program Comprehension},
+	isbn = {0-7695-2860-0},
+	journal = {IEEE International Conference on Program Comprehension},
+	doi = {10.1109/ICPC.2007.17}
+}
